sql codegen added

--- a/models/staging/tpcds/_tpcds__sources.yml
+++ b/models/staging/tpcds/_tpcds__sources.yml
@@ -1,7 +1,7 @@
 version: 2
 
 sources:
-  - name: tpc-ds
+  - name: tpcds
     description: tpc ds model
     database: dbt-learning-project-451408
     schema: raw_tpcds_data
