--- a/models/staging/tpcds/_tpcds__models.yml
+++ b/models/staging/tpcds/_tpcds__models.yml
@@ -1,7 +1,7 @@
 version: 2
 
 models:
-  - name: customers
+  - name: customer
     description: "basic info for customer"
     columns:
       - name: c_customer_sk
